# ample-rp

./: .gitignore  Cargo.toml  README.md
ample/: Cargo.toml  build.rs  resource.rc
ample/src/: lastfm.rs  logging.rs  main.rs  secrets.rs  uri.rs
sys-media/: Cargo.toml
sys-media/src/: consts.rs  lib.rs  win_media.rs
