[package]
name = "ample"
version = "0.1.0"
build = "build.rs"
edition = "2024"

[dependencies]
directories = "6.0.0"
discord-rich-presence = "0.2.5"
dotenvy = "0.15.7"
keyring = { version = "3.6.3", features = ["windows-native", "linux-native"] }
log = "0.4.27"
md5 = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
simplelog = "0.12.2"
sys_media = { path = "../sys-media" }
thiserror = "2.0.12"
ureq = { version = "3.0.12", features = ["json"] }
eventlog = { version = "0.3.0", optional = true }
windows-service = { version = "0.8.0", optional = true }
crossbeam = "0.8.4"
tray-item = "0.10.0"
regex = "1.11.3"
dhat = "0.3.3"

[build-dependencies]
embed-resource = "3.0.6"

[features]
# win_service = ["windows-service", "eventlog"]
headless = []
dhat-heap = []
